[package]
name = "rust-kernel"
version = "0.1.0"
authors = ["fanliyang <1779905848@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mm ={path="mm",default-features=false}
syscall={path="syscall"}
slab_allocator={path="slab_allocator",optional=true}
